# Stamina

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h
Plugin/: 3dsmax.cmake  CMakeLists.txt
Plugin/src/: DllEntry.cpp  Plugin.def  ResourceImporter.cpp  ResourceImporter.h  StaminaMax.cpp  StaminaMax.h  resource.h  resource.rc
Plugin/src/menu/: StaminaMenu.cpp  StaminaMenu.h
Shared/: CMakeLists.txt
Shared/src/dialog/: FileDialog.cpp  FileDialog.h
Shared/src/time/: timestamp.cpp  timestamp.h
Stamina/: CMakeLists.txt  Stamina.cpp  Stamina.h
Stamina/src/: RscFile.h  Stamina.cpp  Stamina.h  StaminaFileDialog.h  Xml.h
Stamina/src/core/: PrecompiledHeader.cpp  PrecompiledHeader.h  Primitives.h  RscFile.h  Stamina.cpp  Stamina.h
Stamina/src/math/: Vectors.h
Stamina/src/rageformats/: CCollection.h  CLightAttr.cpp  CLightAttr.h  grcIndexBuffer.cpp  grcIndexBuffer.h  grcTextureDictionary.cpp  grcTextureDictionary.h  grcTexturePC.cpp  grcTexturePC.h  grcVertexBuffer.cpp  grcVertexBuffer.h  grcVertexFormat.cpp  grcVertexFormat.h  grmGeometryQB.cpp  grmGeometryQB.h  grmGeometryQBCollection.cpp  grmGeometryQBCollection.h  grmModel.cpp  grmModel.h  grmShaderArray.cpp  grmShaderArray.h  grmShaderFx.cpp  grmShaderFx.h  grmShaderGroup.cpp  grmShaderGroup.h  grmShaderParameter.cpp  grmShaderParameter.h  grmShaderParameterCollection.cpp  grmShaderParameterCollection.h  gtaDrawable.cpp  gtaDrawable.h
Stamina/src/rapidxml/: rapidxml_print.hpp
Stamina/src/utils/: JenkinsHash.h  hash.h
Stamina/src/xml/: Xml.h
